--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CollisionDbConnection": "server=localhost;port=3306;database=UtahCollision;user=root;password=Kam21ryn@!**"
+    "CollisionDbConnection": "server=localhost;port=3306;database=UtahCollision;user=root;password=rootuser123"
   }
 }
