--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CollisionDbConnection": "server=localhost;port=3306;database=UtahCollision;user=root;password=rootuser123"
-  }
+  //"AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "CollisionDbConnection": "server=localhost;port=3306;database=UtahCollision;user=root;password=rootuser123"
+  //}
 }
